android-11.0.0_r1 part 1